[package]
name = "lgtmgen"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", features = ["color_quant", "nasm"] }
imageproc = "0.25"
ab_glyph = { version = "0.2", features = ["std"] }
toml = "0.8.19"
serde = { version = "1.0.206", features = ["derive", "serde_derive"] }
glob = "0.3.1"
regex = "1.10.6"


[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
strip = true
incremental = false
overflow-checks = false
